[gd_scene load_steps=3 format=3 uid="uid://ci1hceptj3hwn"]

[ext_resource type="Script" path="res://Scripts/UI/Ingame/MissionSuccessScreen.gd" id="1_1y8o2"]
[ext_resource type="Theme" uid="uid://b8bvv1n5midlh" path="res://Scenes/Resource/UI/MainTheme.tres" id="2_ly8ke"]

[node name="MissionSuccessScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1y8o2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -253.0
offset_top = -115.0
offset_right = 2099.0
offset_bottom = 1299.0
color = Color(0, 0.4, 0.00666666, 0.215686)

[node name="YouDied" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 210.0
offset_right = 1921.0
offset_bottom = 442.0
theme = ExtResource("2_ly8ke")
theme_override_font_sizes/font_size = 72
text = "Mission Success!"
horizontal_alignment = 1

[node name="FunnyText" type="Label" parent="."]
layout_mode = 0
offset_top = 320.0
offset_right = 1922.0
offset_bottom = 421.0
theme = ExtResource("2_ly8ke")
theme_override_font_sizes/font_size = 25
text = "Good job. You did better than your predecessors"
horizontal_alignment = 1

[node name="ReturnToStation" type="Button" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 438.0
offset_right = 1199.0
offset_bottom = 512.0
tooltip_text = "Tryhard"
theme = ExtResource("2_ly8ke")
theme_override_font_sizes/font_size = 36
text = "Return to Research Station"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 526.0
offset_right = 1081.0
offset_bottom = 600.0
tooltip_text = "Coward"
theme = ExtResource("2_ly8ke")
theme_override_font_sizes/font_size = 36
text = "Exit to Menu"

[connection signal="button_up" from="ReturnToStation" to="." method="_on_return_to_station_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_quit_button_button_up"]
